[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Game objects/Big_Fire.gd" type="Script" id=1]
[ext_resource path="res://assets/big_fire.png" type="Texture" id=2]


[node name="big_fire" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 3
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, 91, 79, 91, 78, 70, 90, 71, 90, 31, 78, 29, 79, 19, 88, 10, 80, 1, 82, -29, 60, -76, -19, -90, -69, -89, -77, -77, -80, -15, -97, 14, -95, 59, -71, 94 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 91, 79, 91, 78, 70, 90, 71, 90, 31, 78, 29, 79, 19, 88, 10, 80, 1, 82, -29, 60, -76, -19, -90, -69, -89, -77, -77, -80, -15, -97, 14, -95, 59, -71, 94 )

[node name="big_fire" type="Sprite" parent="."]
visible = false
position = Vector2( 1.75, 0 )
scale = Vector2( 0.335156, 0.383333 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
